# pakery

./: .gitignore  CHANGELOG.md  COMMIT_MSG.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/commands/: bump-version.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  publish.yml
pake-core/: Cargo.toml
pake-core/src/: encoding.rs  lib.rs
pake-core/src/crypto/: group.rs  hash.rs  kdf.rs  ksf.rs  oprf.rs
pake-cpace/: Cargo.toml
pake-cpace/src/: ciphersuite.rs  error.rs  generator.rs  initiator.rs  lib.rs  responder.rs  transcript.rs
pake-crypto/: Cargo.toml
pake-crypto/src/: hash.rs  hash_sha256.rs  kdf.rs  ksf.rs  lib.rs  mac.rs  oprf_common.rs  oprf_p256.rs  oprf_ristretto.rs  p256_group.rs  ristretto255.rs
pake-opaque/: Cargo.toml
pake-opaque/src/: ciphersuite.rs  envelope.rs  error.rs  key_derivation.rs  key_stretch.rs  lib.rs  login.rs  messages.rs  oprf.rs  registration.rs  server_setup.rs
pake-spake2/: Cargo.toml
pake-spake2/src/: transcript.rs
pake-spake2plus/: Cargo.toml
pake-spake2plus/src/: ciphersuite.rs  error.rs  prover.rs  registration.rs  transcript.rs  verifier.rs
pake-tests/: Cargo.toml
pake-tests/tests/: cpace_vectors.rs  opaque_vectors.rs  spake2_vectors.rs  spake2plus_vectors.rs
pakery-core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
pakery-core/src/: encoding.rs  error.rs  secret.rs
pakery-core/src/crypto/: dh.rs  group.rs  ksf.rs  mac.rs  mod.rs
pakery-cpace/: Cargo.toml  README.md
pakery-cpace/src/: ciphersuite.rs  error.rs  generator.rs  initiator.rs  responder.rs  transcript.rs
pakery-crypto/: Cargo.toml  README.md
pakery-crypto/src/: hash.rs  hash_sha256.rs  kdf.rs  kdf_sha256.rs  ksf.rs  lib.rs  mac.rs  mac_sha256.rs  oprf_common.rs  oprf_p256.rs  oprf_ristretto.rs  p256_dh.rs  p256_group.rs  ristretto255.rs  spake2_constants.rs  spake2_constants_p256.rs  suites.rs
pakery-opaque/: Cargo.toml  README.md
pakery-opaque/src/: ciphersuite.rs  envelope.rs  error.rs  key_derivation.rs  lib.rs  login.rs  messages.rs  oprf.rs  registration.rs  server_setup.rs
pakery-spake2/: Cargo.toml  README.md
pakery-spake2/src/: ciphersuite.rs  encoding.rs  error.rs  lib.rs  party_a.rs  party_b.rs  transcript.rs
pakery-spake2plus/: Cargo.toml  README.md
pakery-spake2plus/src/: ciphersuite.rs  encoding.rs  error.rs  lib.rs  prover.rs  registration.rs  transcript.rs  verifier.rs
pakery-tests/: Cargo.toml
pakery-tests/src/: lib.rs
pakery-tests/tests/: cpace_p256_vectors.rs  cpace_vectors.rs  opaque_p256_vectors.rs  opaque_vectors.rs  spake2_p256_vectors.rs  spake2_vectors.rs  spake2plus_p256_vectors.rs  spake2plus_vectors.rs
