[workspace]
resolver = "2"
members = ["pake-core", "pake-cpace", "pake-crypto", "pake-opaque", "pake-tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/pake"

[workspace.dependencies]
group = "0.13"
ff = "0.13"
digest = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["group"] }
voprf = { version = "0.5", features = ["ristretto255", "ristretto255-ciphersuite"] }
hkdf = "0.12"
hmac = "0.12"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
generic-array = "0.14"
