[workspace]
resolver = "2"
members = ["pake-core", "pake-cpace", "pake-crypto", "pake-opaque", "pake-spake2", "pake-spake2plus", "pake-tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/pake"

[workspace.dependencies]
group = "0.13"
ff = "0.13"
digest = "0.10"
rand_core = { version = "0.6" }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["group"] }
hkdf = "0.12"
hmac = "0.12"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
generic-array = "0.14"
