[package]
name = "pake-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for PAKE protocol implementations"

[features]
default = ["std"]
std = []

[dependencies]
zeroize = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }
