[package]
name = "pake-cpace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CPace balanced PAKE protocol (draft-irtf-cfrg-cpace)"

[features]
default = ["std"]
std = ["alloc", "pake-core/std"]
alloc = ["pake-core/alloc"]

[dependencies]
pake-core = { path = "../pake-core", default-features = false, features = ["alloc"] }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
