[package]
name = "pake-cpace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CPace balanced PAKE protocol (draft-irtf-cfrg-cpace)"

[features]
default = ["std"]
std = ["pake-core/std"]

[dependencies]
pake-core = { path = "../pake-core", default-features = false }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
