[package]
name = "pake-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Concrete cryptographic implementations for PAKE protocols"

[features]
default = ["ristretto255"]
ristretto255 = ["dep:curve25519-dalek", "dep:sha2", "dep:hkdf", "dep:hmac", "dep:voprf"]
p256 = ["dep:p256", "dep:sha2", "dep:hkdf", "dep:hmac"]
argon2 = ["dep:argon2"]

[dependencies]
pake-core = { path = "../pake-core", default-features = false }
rand_core = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
curve25519-dalek = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
voprf = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
