[package]
name = "pake-opaque"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OPAQUE augmented PAKE protocol (RFC 9807)"

[features]
default = ["std"]
std = ["alloc", "pake-core/std"]
alloc = ["pake-core/alloc"]

[dependencies]
pake-core = { path = "../pake-core", default-features = false, features = ["alloc"] }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
