[package]
name = "pake-opaque"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OPAQUE augmented PAKE protocol (RFC 9807)"

[features]
default = ["std"]
std = ["pake-core/std"]
test-utils = []

[dependencies]
pake-core = { path = "../pake-core", default-features = false }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
