[package]
name = "pake-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test vectors and integration tests for pake crates"

[features]
default = []
argon2 = ["pake-opaque/argon2"]

[dependencies]
pake-core = { path = "../pake-core" }
pake-cpace = { path = "../pake-cpace" }
pake-opaque = { path = "../pake-opaque" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
group = { workspace = true }
ff = { workspace = true }
rand_core = { workspace = true }
