[package]
name = "pake-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test vectors and integration tests for pake crates"

[features]
default = []
argon2 = ["pake-crypto/argon2"]

[dependencies]
pake-core = { path = "../pake-core" }
pake-cpace = { path = "../pake-cpace" }
pake-opaque = { path = "../pake-opaque" }
pake-crypto = { path = "../pake-crypto" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { workspace = true }
curve25519-dalek = { workspace = true }
