[package]
name = "pakery-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared utilities for PAKE protocol implementations"
readme = "README.md"
documentation = "https://docs.rs/pakery-core"
keywords = ["pake", "cryptography", "password", "key-exchange", "no-std"]
categories = ["cryptography", "no-std::no-alloc", "authentication"]

[features]
default = ["std"]
std = []
getrandom = ["rand_core/getrandom"]

[dependencies]
zeroize = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }
