[package]
name = "pakery-opaque"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OPAQUE augmented PAKE protocol (RFC 9807)"
readme = "README.md"
documentation = "https://docs.rs/pakery-opaque"
keywords = ["pake", "opaque", "password", "key-exchange", "no-std"]
categories = ["cryptography", "no-std::no-alloc", "authentication"]

[features]
default = ["std"]
std = ["pakery-core/std"]
getrandom = ["rand_core/getrandom"]
test-utils = []

[dependencies]
pakery-core = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
