[package]
name = "pakery-spake2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SPAKE2 balanced PAKE protocol (RFC 9382)"
readme = "README.md"
documentation = "https://docs.rs/pakery-spake2"
keywords = ["pake", "spake2", "password", "key-exchange", "no-std"]
categories = ["cryptography", "no-std::no-alloc", "authentication"]

[features]
default = ["std"]
std = ["pakery-core/std"]
getrandom = ["rand_core/getrandom"]
test-utils = []

[dependencies]
pakery-core = { version = "0.1.0", path = "../pakery-core", default-features = false }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
