[package]
name = "pakery-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test vectors and integration tests for pakery crates"
publish = false

[features]
default = []
p256 = ["pakery-crypto/p256", "dep:p256"]
argon2 = ["pakery-crypto/argon2"]

[dependencies]
pakery-core = { version = "0.1.0", path = "../pakery-core" }
pakery-cpace = { version = "0.1.0", path = "../pakery-cpace" }
pakery-opaque = { version = "0.1.0", path = "../pakery-opaque", features = ["test-utils"] }
pakery-spake2 = { version = "0.1.0", path = "../pakery-spake2", features = ["test-utils"] }
pakery-spake2plus = { version = "0.1.0", path = "../pakery-spake2plus", features = ["test-utils"] }
pakery-crypto = { version = "0.1.0", path = "../pakery-crypto" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { workspace = true, features = ["getrandom"] }
curve25519-dalek = { workspace = true }
p256 = { workspace = true, optional = true }
