[package]
name = "pakery-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test vectors and integration tests for pakery crates"
publish = false

[features]
default = []
p256 = ["pakery-crypto/p256", "dep:p256"]
argon2 = ["pakery-crypto/argon2"]

[dependencies]
pakery-core = { workspace = true, default-features = true }
pakery-cpace = { workspace = true }
pakery-opaque = { workspace = true, features = ["test-utils"] }
pakery-spake2 = { workspace = true, features = ["test-utils"] }
pakery-spake2plus = { workspace = true, features = ["test-utils"] }
pakery-crypto = { workspace = true }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { workspace = true, features = ["getrandom"] }
curve25519-dalek = { workspace = true }
p256 = { workspace = true, optional = true }
